playing with the stationary height to try to fix scoll issue on mobile

--- a/less/index.less
+++ b/less/index.less
@@ -1,11 +1,17 @@
 * {
   box-sizing: border-box;
 }
+@phone: ~"(max-width: 400px)";
+@tablet: ~"(max-width: 1200px)";
 
 html {
   overflow: scroll;
   overflow-x: hidden;
 }
+@media @tablet {
+  overflow: none;
+}
+
 ::-webkit-scrollbar {
   width: 0px; /* remove scrollbar space */
   background: transparent; /* optional: just make scrollbar invisible */
@@ -14,9 +20,6 @@ html {
 ::-webkit-scrollbar-thumb {
   background: white;
 }
-
-@phone: ~"(max-width: 400px)";
-@tablet: ~"(max-width: 1200px)";
 
 .wrapper {
   display: flex;
@@ -31,7 +34,7 @@ html {
   }
   .stationary {
     width: 45%;
-    height: 100%;
+    //height: 100%;
     display: flex;
     flex-grow: 1;
     justify-content: center;
@@ -40,6 +43,8 @@ html {
     margin: 20px;
     @media @tablet {
       width: 100%;
+      height: none;
+      flex-grow: none;
     }
 
     .profile-img {
@@ -117,6 +122,9 @@ html {
       @media @tablet {
         width: 100%;
         padding: 5px;
+      }
+      p {
+        text-align: left;
       }
       .video {
         @media @tablet {
